--- a/_posts/2020-05-08-alpha_pca.md
+++ b/_posts/2020-05-08-alpha_pca.md
@@ -4,7 +4,7 @@ date: 2020-05-08
 tags: [alpha]
 header:
   image: "/images/qf_intro_banner.jpg"
-excerpt: "Exploring applications in painting a picture for the abstract shape of "market's movement," utilizing a linear algebraic approach of Eigen Decomposition on Hermitian Matrices, specifically regarded as Principal Component Analysis (PCA) in various other non-finance purposes."
+excerpt: "Exploring applications in painting a picture for the abstract shape of market's movement, utilizing a linear algebraic approach of Eigen Decomposition on Hermitian Matrices, specifically regarded as Principal Component Analysis (PCA) in various other non-finance purposes."
 mathjax: "true"
 ---
 
