--- a/_posts/2020-05-08-alpha_pca.md
+++ b/_posts/2020-05-08-alpha_pca.md
@@ -1,3 +1,13 @@
+---
+title: "[QF] Probing Volatility I: Eigen Decomposition & Portfolios Orthogonality"
+date: 2020-05-08
+tags: [alpha]
+header:
+  image: "/images/qf_intro_banner.jpg"
+excerpt: "Exploring market's volatility utilizing a linear algebraic approach of Eigen Decomposition on Hermitian Matrices, specifically regarded as Principal Component Analysis (PCA) in various other non-finance purposes."
+mathjax: "true"
+---
+
 # The Covariance Matrix
 >*Understanding the mathematical applications when tackling volatility & correlational properties of securities in the market, as well as the market itself.*
 
@@ -31,17 +41,10 @@ From a linear algebraic perspective, specifically in our approach, a matrix acts
 
 In this work, we are exploring a mapping from N-dimensional space to another N-dimensional space, specifically working with a square matrix. The main point of Eigen Decomposition is simply to find **[invariant subspaces](https://en.wikipedia.org/wiki/Invariant_subspace "invariant subspaces") under transformation by a square matrix**.
 
-Given our *M x M* covariance matrix <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" /> of M securities, as square matrix calculated from returns of *N* time indexes, we seek to find <img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" /> and <img src="https://latex.codecogs.com/gif.latex?\lambda_i" title="\lambda_i" /> , respectively as the **eigen vectors** and **eigen values**, where for <img src="https://latex.codecogs.com/gif.latex?i&space;=&space;1,2,...,M" title="i = 1,2,...,M" />, comes with such **eigen pair** that satisfy the condition:
-<img src="https://latex.codecogs.com/gif.latex?\dpi{150}&space;\boldsymbol{C}&space;\cdot&space;e_i&space;=&space;\lambda_i&space;e_i" title="\boldsymbol{C} \cdot e_i = \lambda_i e_i" /> such that:
-- <img src="https://latex.codecogs.com/gif.latex?e_{i}&space;=&space;\begin{vmatrix}&space;e_{i_1}\\&space;e_{i_2}\\&space;\vdots\\&space;e_{i_M}&space;\end{vmatrix}" title="e_{i} = \begin{vmatrix} e_{i_1}\\ e_{i_2}\\ \vdots\\ e_{i_M} \end{vmatrix}" /> , where we can construct an *M x M* matrix of the linearly independent eigen vectors as <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{E}&space;=&space;\begin{vmatrix}&space;e_1&space;&e_2&space;&\hdots&space;&e_M&space;\end{vmatrix}&space;=\begin{vmatrix}&space;e_{1_1}&space;&&space;e_{2_1}&space;&\hdots&space;&e_{M_1}&space;\\&space;e_{1_2}&space;&&space;e_{2_2}&space;&\hdots&space;&e_{M_2}&space;\\&space;\vdots&space;&\vdots&space;&\ddots&space;&\vdots&space;\\&space;e_{1_M}&space;&e_{2_M}&space;&\hdots&space;&e_{M_M}&space;\end{vmatrix}" title="\boldsymbol{E} = \begin{vmatrix} e_1 &e_2 &\hdots &e_M \end{vmatrix} =\begin{vmatrix} e_{1_1} & e_{2_1} &\hdots &e_{M_1} \\ e_{1_2} & e_{2_2} &\hdots &e_{M_2} \\ \vdots &\vdots &\ddots &\vdots \\ e_{1_M} &e_{2_M} &\hdots &e_{M_M} \end{vmatrix}" />
-
-- <img src="https://latex.codecogs.com/gif.latex?\lambda_i" title="\lambda_i" /> is a **real** value, each associated with <img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" />,  to which we can diagonalize it into another *M x M* square matrix:
-<img src="https://latex.codecogs.com/gif.latex?\boldsymbol{V}&space;=&space;\begin{vmatrix}&space;\lambda_1&space;&0&space;&\hdots&space;&0&space;\\&space;0&space;&\lambda_2&space;&\hdots&space;&0&space;\\&space;\vdots&space;&\vdots&space;&\ddots&space;&\vdots&space;\\&space;0&space;&0&space;&\hdots&space;&\lambda_M&space;\end{vmatrix}" title="\boldsymbol{V} = \begin{vmatrix} \lambda_1 &0 &\hdots &0 \\ 0 &\lambda_2 &\hdots &0 \\ \vdots &\vdots &\ddots &\vdots \\ 0 &0 &\hdots &\lambda_M \end{vmatrix}" />
-
-
+Given our *M x M* covariance matrix <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" /> of M securities, as square matrix calculated from returns of *N* time indexes, we seek to find <img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" /> and <img src="https://latex.codecogs.com/gif.latex?\lambda_i" title="\lambda_i" /> , respectively as the **eigen vectors** and **eigen values**, where <img src="https://latex.codecogs.com/gif.latex?i&space;=&space;1,2,...,M" title="i = 1,2,...,M" />, such that  <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}&space;\cdot&space;e_i&space;=&space;\lambda_i&space;e_i" title="\boldsymbol{C} \cdot e_i = \lambda_i e_i" />, where <img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" /> has the shape of *M x 1* .
 
 Due to the nature of <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" /> being not just as a square matrix, but also a **Hermitian Matrix**, our values will be **real** & the matrix is diagonalizable such that:
-<img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}&space;=&space;\boldsymbol{E^\top}&space;\cdot&space;\boldsymbol{V}&space;\cdot&space;\boldsymbol{E}&space;=&space;\begin{vmatrix}&space;\sigma_1^2&space;&&space;\sigma_{12}&space;&&space;\hdots&space;&&space;\sigma_{1M}&space;\\&space;\sigma_{21}&space;&&space;\sigma_2^2&space;&&space;\hdots&space;&&space;\sigma_{2M}\\&space;\vdots&space;&\vdots&space;&\ddots&space;&\vdots&space;\\&space;\sigma_{M1}&space;&&space;\sigma_{M2}&space;&\hdots&space;&\sigma_M^2&space;\end{vmatrix}" title="\boldsymbol{C} = \boldsymbol{E^\top} \cdot \boldsymbol{V} \cdot \boldsymbol{E} = \begin{vmatrix} \sigma_1^2 & \sigma_{12} & \hdots & \sigma_{1M} \\ \sigma_{21} & \sigma_2^2 & \hdots & \sigma_{2M}\\ \vdots &\vdots &\ddots &\vdots \\ \sigma_{M1} & \sigma_{M2} &\hdots &\sigma_M^2 \end{vmatrix}" />
+<img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}&space;=&space;\begin{vmatrix}&space;e_1&space;&e_2&space;&\hdots&space;&e_M&space;\end{vmatrix}&space;\cdot&space;\begin{vmatrix}&space;\lambda_1&space;&0&space;&\hdots&space;&0&space;\\&space;0&space;&\lambda_2&space;&\hdots&space;&0&space;\\&space;\vdots&space;&\vdots&space;&\ddots&space;&\vdots&space;\\&space;0&space;&0&space;&\hdots&space;&\lambda_M&space;\end{vmatrix}&space;\cdot&space;\begin{vmatrix}&space;e_1\\&space;e_2\\&space;\vdots\\&space;e_M&space;\end{vmatrix}&space;=&space;\begin{vmatrix}&space;\sigma_1^2&space;&&space;\sigma_{12}&space;&&space;\hdots&space;&&space;\sigma_{1M}&space;\\&space;\sigma_{21}&space;&&space;\sigma_2^2&space;&&space;\hdots&space;&&space;\sigma_{2M}\\&space;\vdots&space;&\vdots&space;&\ddots&space;&\vdots&space;\\&space;\sigma_{M1}&space;&&space;\sigma_{M2}&space;&\hdots&space;&\sigma_M^2&space;\end{vmatrix}" title="\boldsymbol{C} = \begin{vmatrix} e_1 &e_2 &\hdots &e_M \end{vmatrix} \cdot \begin{vmatrix} \lambda_1 &0 &\hdots &0 \\ 0 &\lambda_2 &\hdots &0 \\ \vdots &\vdots &\ddots &\vdots \\ 0 &0 &\hdots &\lambda_M \end{vmatrix} \cdot \begin{vmatrix} e_1\\ e_2\\ \vdots\\ e_M \end{vmatrix} = \begin{vmatrix} \sigma_1^2 & \sigma_{12} & \hdots & \sigma_{1M} \\ \sigma_{21} & \sigma_2^2 & \hdots & \sigma_{2M}\\ \vdots &\vdots &\ddots &\vdots \\ \sigma_{M1} & \sigma_{M2} &\hdots &\sigma_M^2 \end{vmatrix}" />
 
 To observe the significance of to why this is powerful when it comes to applying it on the covariance matrix, we will first highlight the significance of the eigen pairs (<img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" /> & <img src="https://latex.codecogs.com/gif.latex?\lambda_i" title="\lambda_i" />)
 - Eigen vectors <img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" /> are **normalized independent vectors** from each other, meaning that they are **orthogonal** to each other with <img src="https://latex.codecogs.com/gif.latex?||e_i||&space;=&space;1" title="||e_i|| = 1" />
@@ -49,344 +52,7 @@ To observe the significance of to why this is powerful when it comes to applying
 - Therefore, in other words, we perceive the eigen vectors as the directional vectors basis, the axis that builds the entire subspace that described by such matrix, or in this case the covariance matrix <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" />
 - Each eigen value <img src="https://latex.codecogs.com/gif.latex?\lambda_i" title="\lambda_i" /> simply represents the **directional variance** of its associated eigen vector <img src="https://latex.codecogs.com/gif.latex?e_i" title="e_i" /> , independent from one another, such that together they **explain** the total volatility of *M* securities, without any specified allocations.
 
-I have preprocessed & cleaned a $$RET$$ table, logarithmically calculated from *daily close prices*  from early 2016 until May 2020, of 947 securities on the U.S. Equities Market:
-```python
-RET
-```
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>AMG</th>
-      <th>UNH</th>
-      <th>EVR</th>
-      <th>AMD</th>
-      <th>NKE</th>
-      <th>NRG</th>
-      <th>EV</th>
-      <th>VRSN</th>
-      <th>SNPS</th>
-      <th>PKI</th>
-      <th>...</th>
-      <th>Z</th>
-      <th>PLNT</th>
-      <th>PEN</th>
-      <th>MSGS</th>
-      <th>PSTG</th>
-      <th>HPE</th>
-      <th>MTCH</th>
-      <th>SQ</th>
-      <th>TEAM</th>
-      <th>UA</th>
-    </tr>
-    <tr>
-      <th>date</th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>2016-03-24</th>
-      <td>-0.009797</td>
-      <td>-0.009289</td>
-      <td>-0.006481</td>
-      <td>0.040225</td>
-      <td>-0.012733</td>
-      <td>0.011481</td>
-      <td>-0.007713</td>
-      <td>0.004042</td>
-      <td>0.006287</td>
-      <td>-0.004739</td>
-      <td>...</td>
-      <td>0.007574</td>
-      <td>0.011606</td>
-      <td>0.017735</td>
-      <td>-0.005698</td>
-      <td>0.000000</td>
-      <td>0.006280</td>
-      <td>0.028508</td>
-      <td>0.022773</td>
-      <td>-0.033440</td>
-      <td>-0.015406</td>
-    </tr>
-    <tr>
-      <th>2016-03-31</th>
-      <td>0.031082</td>
-      <td>0.002408</td>
-      <td>0.019513</td>
-      <td>0.021277</td>
-      <td>-0.002924</td>
-      <td>-0.009943</td>
-      <td>0.037385</td>
-      <td>-0.007987</td>
-      <td>0.011837</td>
-      <td>0.021251</td>
-      <td>...</td>
-      <td>0.051892</td>
-      <td>0.040206</td>
-      <td>0.023313</td>
-      <td>0.032750</td>
-      <td>0.047878</td>
-      <td>0.009065</td>
-      <td>0.002716</td>
-      <td>0.170869</td>
-      <td>0.054332</td>
-      <td>0.020730</td>
-    </tr>
-    <tr>
-      <th>2016-04-01</th>
-      <td>0.009133</td>
-      <td>0.007882</td>
-      <td>0.009233</td>
-      <td>-0.007042</td>
-      <td>0.001950</td>
-      <td>-0.018620</td>
-      <td>0.010092</td>
-      <td>0.012347</td>
-      <td>0.017192</td>
-      <td>0.017636</td>
-      <td>...</td>
-      <td>-0.011870</td>
-      <td>-0.042774</td>
-      <td>0.015745</td>
-      <td>-0.011852</td>
-      <td>0.054721</td>
-      <td>0.037093</td>
-      <td>0.045944</td>
-      <td>-0.071895</td>
-      <td>-0.059805</td>
-      <td>-0.015323</td>
-    </tr>
-    <tr>
-      <th>2016-04-04</th>
-      <td>-0.020154</td>
-      <td>-0.003315</td>
-      <td>-0.017187</td>
-      <td>0.000000</td>
-      <td>-0.026655</td>
-      <td>0.003127</td>
-      <td>-0.007708</td>
-      <td>-0.001005</td>
-      <td>-0.007128</td>
-      <td>-0.003582</td>
-      <td>...</td>
-      <td>-0.059745</td>
-      <td>0.009594</td>
-      <td>0.003205</td>
-      <td>-0.015880</td>
-      <td>-0.004853</td>
-      <td>-0.019759</td>
-      <td>-0.020062</td>
-      <td>0.004211</td>
-      <td>0.017159</td>
-      <td>-0.008368</td>
-    </tr>
-    <tr>
-      <th>2016-04-05</th>
-      <td>-0.008629</td>
-      <td>-0.019102</td>
-      <td>-0.052586</td>
-      <td>-0.025046</td>
-      <td>-0.005015</td>
-      <td>-0.047971</td>
-      <td>-0.009569</td>
-      <td>-0.009425</td>
-      <td>-0.010478</td>
-      <td>-0.032006</td>
-      <td>...</td>
-      <td>-0.046800</td>
-      <td>-0.004466</td>
-      <td>-0.021998</td>
-      <td>0.008860</td>
-      <td>0.019271</td>
-      <td>-0.024125</td>
-      <td>-0.016882</td>
-      <td>-0.001402</td>
-      <td>-0.026063</td>
-      <td>0.008368</td>
-    </tr>
-    <tr>
-      <th>...</th>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
-    <tr>
-      <th>2020-05-01</th>
-      <td>-0.073998</td>
-      <td>-0.027594</td>
-      <td>-0.032900</td>
-      <td>-0.049096</td>
-      <td>-0.018991</td>
-      <td>-0.016843</td>
-      <td>-0.070259</td>
-      <td>-0.021568</td>
-      <td>-0.048777</td>
-      <td>-0.016034</td>
-      <td>...</td>
-      <td>-0.034718</td>
-      <td>-0.045960</td>
-      <td>-0.038517</td>
-      <td>-0.022251</td>
-      <td>-0.074215</td>
-      <td>-0.059383</td>
-      <td>-0.030609</td>
-      <td>-0.033404</td>
-      <td>-0.005805</td>
-      <td>-0.056587</td>
-    </tr>
-    <tr>
-      <th>2020-05-04</th>
-      <td>0.013302</td>
-      <td>0.010594</td>
-      <td>-0.008649</td>
-      <td>0.052335</td>
-      <td>0.002452</td>
-      <td>-0.000607</td>
-      <td>0.018535</td>
-      <td>0.018461</td>
-      <td>0.009577</td>
-      <td>-0.023739</td>
-      <td>...</td>
-      <td>0.003057</td>
-      <td>-0.003129</td>
-      <td>0.003686</td>
-      <td>-0.005566</td>
-      <td>-0.038114</td>
-      <td>-0.010605</td>
-      <td>0.033464</td>
-      <td>0.010893</td>
-      <td>0.053771</td>
-      <td>-0.005724</td>
-    </tr>
-    <tr>
-      <th>2020-05-05</th>
-      <td>-0.014226</td>
-      <td>0.018947</td>
-      <td>-0.020821</td>
-      <td>-0.007064</td>
-      <td>0.016768</td>
-      <td>-0.001823</td>
-      <td>0.012547</td>
-      <td>0.008155</td>
-      <td>0.020700</td>
-      <td>0.038447</td>
-      <td>...</td>
-      <td>0.023438</td>
-      <td>-0.006287</td>
-      <td>0.029800</td>
-      <td>0.008427</td>
-      <td>0.023042</td>
-      <td>0.003193</td>
-      <td>0.037135</td>
-      <td>0.046027</td>
-      <td>0.038777</td>
-      <td>-0.029123</td>
-    </tr>
-    <tr>
-      <th>2020-05-06</th>
-      <td>-0.035278</td>
-      <td>-0.014679</td>
-      <td>-0.013080</td>
-      <td>-0.000575</td>
-      <td>0.014120</td>
-      <td>-0.003350</td>
-      <td>-0.005399</td>
-      <td>0.008842</td>
-      <td>0.016653</td>
-      <td>0.031036</td>
-      <td>...</td>
-      <td>-0.003907</td>
-      <td>0.056535</td>
-      <td>0.000963</td>
-      <td>-0.002622</td>
-      <td>0.042370</td>
-      <td>-0.006397</td>
-      <td>0.086647</td>
-      <td>0.020922</td>
-      <td>0.019504</td>
-      <td>-0.027563</td>
-    </tr>
-    <tr>
-      <th>2020-05-07</th>
-      <td>0.025681</td>
-      <td>-0.013141</td>
-      <td>0.050928</td>
-      <td>-0.004034</td>
-      <td>0.001356</td>
-      <td>-0.020340</td>
-      <td>0.024762</td>
-      <td>-0.003017</td>
-      <td>0.013364</td>
-      <td>-0.005376</td>
-      <td>...</td>
-      <td>0.111650</td>
-      <td>0.012177</td>
-      <td>0.043112</td>
-      <td>0.005949</td>
-      <td>0.085737</td>
-      <td>0.024301</td>
-      <td>-0.055550</td>
-      <td>0.091431</td>
-      <td>0.038905</td>
-      <td>0.045138</td>
-    </tr>
-  </tbody>
-</table>
-<p>1010 rows × 947 columns</p>
-</div>
+We will demonstrate this understanding by visualizing the observable effect with M = 2 & 3 being M-dimensional to be working with.
 
 
 
