--- a/_posts/2020-05-08-alpha_pca.md
+++ b/_posts/2020-05-08-alpha_pca.md
@@ -433,6 +433,8 @@ Plotting their returns against each other in **2-Dimensional Space** and we have
 ax = RET.plot.scatter("SPY","IEF",alpha=0.2)
 ax.set_aspect("equal")
 ```
+<img src="https://i.ibb.co/pRnprzW/1.png" alt="1" border="0">
+
 
 Observe the relationship between two assets, exhibiting negative correlation, reflecting behaviorial through the financial market (i.e.: As the market goes down, demand falls for equities and rises in treasury, like what happened during COVID-19 market crash). 
 
@@ -482,6 +484,8 @@ If we plot the cummulative returns between the two assets, we can see their corr
 (1+RET[["SPY","IEF"]]).cumprod().plot()
 ```
 
+<img src="https://i.ibb.co/Zd9h67Z/2.png" alt="2" border="0">
+
 Using numpy's linalg module to extract our eigen pairs. I have written a function carrying out this calculation with any input $$RET$$ table:
 
 ```python
@@ -516,6 +520,8 @@ for e in lambdas.index:
               [_start[y]-v[y],_start[y]+v[y]],color=_colors[e],linewidth=2,label=e)
 ax.set_aspect("equal")
 ```
+
+<img src="https://i.ibb.co/VCXtjNb/3.png" alt="3" border="0">
 
 > **REMARK**: The eigen components are orthogonal to each other, encapsulating the magnitudes of standard deviation in both dimensions. We interpret M eigen values as **independently explained variances** that, together, describe the **total variance** of our M selected securities.
 
@@ -601,6 +607,8 @@ Calling it on our demonstrated example of SHY v.s. IEF, we obtain:
 ```python
 result = EIGEN(RET[["SPY","IEF"]])
 ```
+
+<img src="https://i.ibb.co/8B6N4M3/4.png" alt="4" border="0">
 
 You can perform this analysis on any such visualizable amount of securities given the returns table inputted. Below are results of various examples I have selected to showcase certain interesting relationships:
 
