--- a/_posts/2020-05-08-alpha_pca.md
+++ b/_posts/2020-05-08-alpha_pca.md
@@ -1,10 +1,10 @@
 ---
-title: "[QF] Probing Volatility I: Eigen Decomposition & Portfolios Orthogonality"
+title: "[QF] Probing Volatility I: Eigen Decomposition of Covariance Matrices"
 date: 2020-05-08
-tags: [alpha]
+tags: [qf]
 header:
   image: "/images/qf_intro_banner.jpg"
-excerpt: "Exploring market's volatility through a linear algebraic approach, encompassing topic commonly known as Principal Component Analysis (PCA) in various other non-finance purposes."
+excerpt: "Exploring volatility through a linear algebraic approach, commonly known as Principal Component Analysis (PCA) in various other non-finance purposes."
 mathjax: "true"
 ---
 
@@ -12,7 +12,7 @@ mathjax: "true"
 >*Exploring the mathematical applications when tackling volatility & correlational properties of securities in the market, as well as the market itself, by dissecting covariance matrices*
 
 
-Statistically speaking from an individual approach, for <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;n=1,2,...,N" title="n=1,2,...,N" /> time indexes of <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;r_{i_n}" title="r_{i_n}" /> and  <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;r_{j_n}" title="r_{j_n}" /> as returns data of asset i and j, their covariance <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\sigma_{ij}" title="\sigma_{ij}" /> is calculated as:
+From basic statistics, for <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;n=1,2,...,N" title="n=1,2,...,N" /> time indexes of <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;r_{i_n}" title="r_{i_n}" /> and  <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;r_{j_n}" title="r_{j_n}" /> as returns data of asset i and j, their covariance <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\sigma_{ij}" title="\sigma_{ij}" /> is calculated as:
 - <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\sigma_{ij}&space;=&space;\frac{\sum_{1}^{N}(r_{i_n}&space;-&space;\bar{r_i})(r_{j_n}&space;-&space;\bar{r_j})}{N-1}" title="\sigma_{ij} = \frac{\sum_{1}^{N}(r_{i_n} - \bar{r_i})(r_{j_n} - \bar{r_j})}{N-1}" /> for **sample size**
 - <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\sigma_{ij}&space;=&space;\frac{\sum_{1}^{N}(r_{i_n}&space;-&space;\bar{r_i})(r_{j_n}&space;-&space;\bar{r_j})}{N}" title="\sigma_{ij} = \frac{\sum_{1}^{N}(r_{i_n} - \bar{r_i})(r_{j_n} - \bar{r_j})}{N}" /> for **population size**
  
@@ -527,7 +527,7 @@ ax.set_aspect("equal")
 
 We can further perform this step for not just 2-dimensional space (M=2) but also 3-dimensional space (M=3), you can see how such mathematics can take us further to any M-dimensional space such that we can describe the entire variance of M securities , in such abstract vector space that we can't visualize, down to the independent components.
 
-Compiling all the written codes above, adding 3-Dimensional plotting, we compile a **single function** for 2 & 3 dimensional data (to be modified for more functionalities below):
+Combining all the written codes above, we compile a **single function** for 2 & 3 dimensional data (to be modified for more functionalities below):
 
 
 ```python
@@ -537,12 +537,12 @@ def EIGEN(ret):
     fig = plt.figure()
     _ax_ = fig.gca() if (ret.shape[1] == 2) else fig.gca(projection="3d")
     vectors,lambdas = PCA(ret)
-    explained_variance = lambdas/lambdas.sum()
+    explained_variance_ratio = lambdas/lambdas.sum()
     _labels = pd.Series([(i+" - "+str(
-                    (explained_variance[i]*100).round(2))+"%") for i in explained_variance.index],
-                           index=explained_variance.index)
+                    (explained_variance_ratio[i]*100).round(2))+"%") for i in explained_variance_ratio.index],
+                           index=explained_variance_ratio.index)
     result = {"vectors":vectors,"lambdas":lambdas,
-              "explained_variance":explained_variance}
+              "explained_variance_ratio":explained_variance_ratio}
 
     #----| 2-DIMENSIONAL
     if ret.shape[1] == 2:
@@ -602,7 +602,7 @@ def EIGEN(ret):
     return result
 ```
 
-Calling it on our demonstrated example of SHY v.s. IEF, we obtain:
+Calling it on our demonstrated example of SPY v.s. IEF, we obtain:
 
 ```python
 result = EIGEN(RET[["SPY","IEF"]])
