--- a/_posts/2020-05-08-alpha_pca.md
+++ b/_posts/2020-05-08-alpha_pca.md
@@ -1,7 +1,7 @@
 ---
-title: "[QF-Research] Probing Volatility I: Eigen Decomposition of Covariance Matrices"
+title: "[QF] Probing Volatility I: Eigen Decomposition of Covariance Matrices"
 date: 2020-05-08
-tags: [qf]
+tags: [research]
 header:
   image: "/images/qf_intro_banner.jpg"
 excerpt: "Exploring volatility through a linear algebraic approach, topics commonly known as Principal Component Analysis (PCA), Clustering Algorithms, etc... in various other non-finance purposes."
