third post & edits

--- a/_posts/2020-05-12-qf_intro.md
+++ b/_posts/2020-05-12-qf_intro.md
@@ -25,7 +25,7 @@ In another words, as said by Igor Tulchinsky, the founder of WorldQuant:
 The decision to compose publication(s) of my research notes & implementation results was propelled after reading Tulchinsky's book on [*Finding Alphas*](https://www.amazon.com/Finding-Alphas-Quantitative-Approach-Strategies/dp/1119057868), especially after realizing that my mathematical approach drew significant parallel to the content of his book, though Tulchinsky has provided me the terminologies & credible academic foundations needed to not just affirm my mathematical interpretations in tackling such topic, as well as my doubt on the reliability of my developed models & strategies, but also articulate my understandings & personal approaches that could potentially help other passionate participants in the world of Quantitative Finance.
 
 # Foundations & Basic Essentials
-*Brief coverage on basic foundational topics in finance for understanding toward alpha designs (mathematics & coding implementations will be detailed in subsequent posts)*
+*Brief coverage on basic foundational topics in finance for understanding toward alpha designs & portfolio management*
 
 ---
 
